# volga

./: .gitignore  Cargo.toml  Dockerfile  FAULT_TOLERANCE_TEST_PLAN.md  FAULT_TOLERANCE_TODO.md  LICENSE  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
rust/src/network/: buffer_queue.rs  buffer_queues.rs  buffer_utils.rs  channel.rs  channels_router.rs  data_reader.rs  data_writer.rs  io_loop.rs  metrics.rs  mod.rs  network_config.rs  py_interface.rs  remote_transfer_handler.rs  socket_meta.rs  sockets.rs  sockets_monitor.rs  utils.rs
rust/src/network_deprecated/: buffer_queues.rs  buffer_utils.rs  channels_router.rs  data_reader.rs  data_writer.rs  metrics.rs  mod.rs  network_config.rs  sockets.rs  sockets_monitor.rs
rust/src/newtork/: buffer_queues.rs  buffer_utils.rs  channel.rs  data_reader.rs  data_writer.rs  io_loop.rs  metrics.rs  mod.rs  network_config.rs  py_interface.rs  remote_transfer_handler.rs  socket_monitor.rs  sockets.rs
rust/src/newtork_v2/: buffer_queues.rs  buffer_utils.rs  channel.rs  data_reader.rs  data_writer.rs  io_loop.rs  mod.rs  network_config.rs  remote_transfer_handler.rs  socket_monitor.rs  socket_service.rs  sockets.rs  utils.rs
rust/tests/: default_network_config.yaml  default_network_config_deprecated.yaml  network_test.rs  network_test_deprecated.rs  network_test_v2.rs  zmq_test.rs
volga_stream/: .gitignore  Cargo.toml  build.rs
volga_stream/proto/: in_memory_storage_service.proto  master_service.proto  worker_service.proto
volga_stream/src/: lib.rs
volga_stream/src/api/: compiler.rs  logical_graph.rs  logical_optimizer_examples.rs  mod.rs  pipeline_context.rs  pipeline_spec.rs  planner.rs  streaming_context.rs
volga_stream/src/api/spec/: mod.rs  pipeline.rs  placement.rs  resources.rs  storage.rs  worker_runtime.rs
volga_stream/src/cluster/: cluster_provider.rs  mod.rs  node_assignment.rs
volga_stream/src/common/: data_batch.rs  key.rs  message.rs  mod.rs  record.rs  test_utils.rs
volga_stream/src/control_plane/: controller.rs  mod.rs
volga_stream/src/control_plane/http/: mod.rs
volga_stream/src/control_plane/store/: mod.rs
volga_stream/src/core/: collector.rs  function.rs  mod.rs  operator.rs  partition.rs  processor.rs  record.rs  runtime_context.rs  source.rs  task.rs
volga_stream/src/entrypoints/: volga_master.rs  volga_worker.rs
volga_stream/src/executor/: bootstrap.rs  executor.rs  fake_distributed_executor.rs  k8s_runtime_adapter.rs  local_executor.rs  local_runtime_adapter.rs  mod.rs  placement.rs  resource_planner.rs  runtime_adapter.rs
volga_stream/src/in_mem_grpc_store/: in_memory_storage_grpc_client.rs  in_memory_storage_grpc_server.rs  mod.rs
volga_stream/src/network/: data_reader.rs  data_writer.rs  mod.rs
volga_stream/src/runtime/: actors.rs  bootstrap.rs  collector.rs  execution_graph.rs  function.rs  function_trait.rs  key_by_function.rs  map_function.rs  master.rs  master_example.rs  master_server.rs  metrics.rs  mod.rs  operator.rs  partition.rs  processor.rs  reduce_function.rs  runtime_context.rs  sink_function.rs  source.rs  source_function.rs  stream_task.rs  stream_task_actor.rs  task.rs  utils.rs  worker.rs  worker_server.rs  worker_server_example.rs
volga_stream/src/runtime/entrypoints/: in_process.rs  standalone.rs
volga_stream/src/runtime/functions/: function_trait.rs  mod.rs
volga_stream/src/runtime/observability/: snapshot_history.rs  snapshot_types.rs
volga_stream/src/runtime/operators/: mod.rs  operator.rs
volga_stream/src/runtime/state/: operator_states.rs
volga_stream/src/runtime/storage/: in_memory_storage_actor.rs  in_memory_storage_grpc_client.rs  in_memory_storage_grpc_server.rs  mod.rs
volga_stream/src/runtime/tests/: actor_test.rs  chained_execution_consistency_test.rs  checkpoint_recovery_test.rs  distributed_execution_test.rs  graph_test_utils.rs  graph_test_utils_test.rs  master_worker_execution_test.rs  mod.rs  perf_tests.rs  request_execution_mode_test.rs  request_source_e2e_test.rs  stream_task_actor_test.rs  stream_task_test.rs  test_graph_utils_test.rs  test_utils.rs  watermark_streaming_benchmark_test.rs  watermark_streaming_e2e_test.rs  window_operator_benchmark.rs  window_request_operator_benchmark.rs  word_count_benchmark.rs  word_count_test.rs  worker_shutdown_test.rs  worker_test.rs
volga_stream/src/runtime/watermark/: confg.rs  manager.rs  mod.rs  runtime.rs
volga_stream/src/sql_testing/: mod.rs  sql_tests.rs
volga_stream/src/storage/: README.md  batch.rs  batch_pins.rs  batch_retirement.rs  batch_store.rs  budget.rs  config.rs  constants.rs  in_mem_batch_cache.rs  in_memory_storage_grpc_client.rs  in_memory_storage_grpc_server.rs  memory_pool.rs  mod.rs  remote_batch_store.rs  sorted_range_view_loader.rs  stats.rs  storage.rs  work_budget.rs  worker_storage_context.rs
volga_stream/src/storage/backend/: inmem.rs  mod.rs  remote_backend.rs
volga_stream/src/storage/compactor/: compactor.rs  low_level.rs  mod.rs
volga_stream/src/storage/delete/: batch_pins.rs  batch_retirement.rs  mod.rs
volga_stream/src/storage/flow_control/: backlog.rs  mod.rs
volga_stream/src/storage/index/: bucket_index.rs  bucket_range.rs  compaction.rs  mod.rs  sorted_range_index.rs  sorted_range_view.rs  time_granularity.rs
volga_stream/src/storage/maintenance/: compact.rs  dump.rs  mod.rs  orchestrator.rs  pressure.rs  rehydrate.rs  supervisor.rs  types.rs
volga_stream/src/storage/read/: base_runs.rs  exec.rs  mod.rs  plan.rs
volga_stream/src/storage/segments/: compact.rs  mod.rs
volga_stream/src/storage/worker_storage/: mod.rs
volga_stream/src/storage/write/: mod.rs  state_cache.rs  (+3 more)
volga_stream/src/transport/: batch_channel.rs  batcher.rs  channel.rs  grpc_transport_backend.rs  in_memory_transport_backend.rs  mod.rs  test_utils.rs  transport.rs  transport_actor.rs  transport_backend.rs  transport_backend_actor.rs  transport_client.rs  transport_client_actor.rs  transport_factory.rs
volga_stream/tests/: control_plane_e2e_test.rs  k8s_pipeline_lifecycle.rs
(+865 files in other folders)
