[tool.poetry]
name = "volga"
version = "0.1.0"
description = "Real-time feature/ML engine"
authors = ["Andrey Novitskiy <valera.dirty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

