[tool.poetry]
name = "volga"
version = "0.1.0"
description = "Real-time feature/ML engine"
authors = ["Andrey Novitskiy <valera.dirty@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.0.0"
ray = "2.22.0"
pydantic = "^1.10.13"
simplejson = "^3.19.2"
orjson = "^3.10.6"
pyzmq = "23.2.0"
shared-memory-dict = "0.7.2"
locket = "1.0.0"
aenum = "3.1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

