[package]
name = "volga_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "volga_rust"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
pyo3 = {version = "0.18.3", features = ["extension-module"]}
zmq = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

