[package]
name = "volga_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "volga_rust"
# crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
pyo3 = {version = "0.18.3", features = ["extension-module"]}
zmq = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rand = "0.5.0"
bincode = "1.3.3"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1.3"
rmp = "0.8.14"
rmpv = "1.3.0"
rmp-serde = "1.3.0"
varint = "0.9.0"
advisory-lock = "0.3.0"
serde_yaml = "0.9.34"
itertools = "0.13.0"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

