[profile.dev]
incremental = true

[package]
name = "volga_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "volga_stream"
# crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]
crate-type = ["rlib"]
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
rand = "0.5.0"
bincode = "1.3.3"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-rayon = "2.1.0"
futures = "0.3"
ordered-float = { version = "3.7", features = ["serde"] }
arrow = "55.0.0"
tokio-util = "0.7"
lazy_static = "1.4"
kameo = "0.16.0"
arrow-row = "55.1.0"

tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
datafusion = "49.0.0"
datafusion-optimizer = "49.0.0"
petgraph = "0.6"
parking_lot = "0.12"
ahash = "0.8"

[build]
rustflags = ["--cfg", "tokio_unstable"]
