[profile.dev]
incremental = true

[profile.release]
# Keep debug info for profiling
debug = "line-tables-only"

# Optional: Create a dedicated profiling profile
[profile.profiling]
inherits = "release"
debug = true
strip = false

[package]
name = "volga_stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "volga_stream"
# crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]
crate-type = ["rlib"]
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.12"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "3"
rand = "0.8.5"
bincode = "1.3.3"
async-trait = "0.1"
anyhow = "1.0"
bytes = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-rayon = "2.1.0"
futures = "0.3"
async-stream = "0.3"
ordered-float = { version = "3.7", features = ["serde"] }
arrow = "55.0.0"
arrow-json = "55.0.0"
tokio-util = "0.7"
lazy_static = "1.4"
kameo = "0.16.0"
arrow-row = "55.1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
parquet = "55.2.0"
object_store = { version = "0.12.3", features = ["aws", "http"] }
regex = "1"

tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
datafusion = "49.0.0"
datafusion-optimizer = "49.0.0"
datafusion-proto-common = "49.0.0"
petgraph = "0.6"
parking_lot = "0.12"
ahash = "0.8"
foyer = "0.19.1"
crossbeam-skiplist = "0.1.3"
dashmap = "5.5"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
slatedb = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
metrics-exporter-tcp = "0.11.1"
metrics-util = "0.20.0"
prometheus-parse = "0.2.5"
indexmap = "2.11.4"
axum = "0.7"
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
testcontainers = "0.15"
aws-config = "1"
aws-sdk-s3 = "1"

[build]
rustflags = ["--cfg", "tokio_unstable"]
